# membus-client

./: .gitignore  README.md  hatch_build.py  pyproject.toml
membus/: __init__.py  cli.py  client.py  guide.py  mcp.py  scopes.py
tests/: test_client.py
