[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "membus"
version = "0.1.2"
description = "Scoped memory for LLM agents. Install and go."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "NorthCommits", email = "swapnil.bhatt17@outlook.com" }]
keywords = ["llm", "agents", "memory", "mcp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0"]

[project.scripts]
membus = "membus.cli:main"

[project.urls]
Repository = "https://github.com/NorthCommits/membus-client"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["membus"]
